--- a/package.json
+++ b/package.json
@@ -5,16 +5,29 @@
     "cdk": "bin/cdk.js"
   },
   "scripts": {
-    "build": "echo \"The build step is not required when using JavaScript!\" && exit 0",
-    "cdk": "cdk",
-    "test": "jest"
+    "build": "tsc",
+    "watch": "tsc -w",
+    "test": "jest",
+    "cdk": "cdk"
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.89.0",
+    "@types/jest": "^26.0.10",
+    "@types/node": "10.17.27",
+    "jest": "^26.4.2",
+    "ts-jest": "^26.2.0",
     "aws-cdk": "1.89.0",
-    "jest": "^26.4.2"
+    "ts-node": "^9.0.0",
+    "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/core": "1.89.0"
+    "@aws-cdk/aws-apigateway": "^1.89.0",
+    "@aws-cdk/aws-dynamodb": "^1.89.0",
+    "@aws-cdk/aws-lambda": "^1.89.0",
+    "@aws-cdk/aws-s3": "^1.89.0",
+    "@aws-cdk/core": "1.89.0",
+    "aws-sdk": "^2.841.0",
+    "source-map-support": "^0.5.16",
+    "uuid": "^8.3.2"
   }
 }
