--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "deploy": "tsc & cdk synth & cdk deploy"
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.89.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "@types/uuid": "^8.3.0",
+    "aws-cdk": "1.89.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
-    "aws-cdk": "1.89.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
@@ -27,7 +28,6 @@
     "@aws-cdk/aws-s3": "^1.89.0",
     "@aws-cdk/core": "1.89.0",
     "aws-sdk": "^2.841.0",
-    "source-map-support": "^0.5.16",
-    "uuid": "^8.3.2"
+    "source-map-support": "^0.5.16"
   }
 }
