--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "deploy": "tsc & cdk synth & cdk deploy"
+    "deploy": "tsc & cdk synth & cdk deploy --all"
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.89.0",
@@ -27,7 +27,6 @@
     "@aws-cdk/aws-lambda": "^1.89.0",
     "@aws-cdk/aws-s3": "^1.89.0",
     "@aws-cdk/core": "1.89.0",
-    "aws-sdk": "^2.841.0",
-    "source-map-support": "^0.5.16"
+    "aws-sdk": "^2.841.0"
   }
 }
