--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
     "@types/uuid": "^8.3.0",
-    "aws-cdk": "1.89.0",
+    "aws-cdk": "^1.89.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
